applied patch 2892294: blobtracker - new driver
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8406 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/dio/CMakeLists.txt
+++ b/server/drivers/dio/CMakeLists.txt
@@ -1,5 +1,6 @@
 ADD_SUBDIRECTORY (bitlogic)
 ADD_SUBDIRECTORY (blobtodio)
+ADD_SUBDIRECTORY (blobtracker)
 ADD_SUBDIRECTORY (bumpertodio)
 ADD_SUBDIRECTORY (diodelay)
 ADD_SUBDIRECTORY (diolatch)
