Fixed XSensMT. Fixed incorrect checking of pkg-config versions.
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8458 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/imu/xsens/CMakeLists.txt
+++ b/server/drivers/imu/xsens/CMakeLists.txt
@@ -1,13 +1,15 @@
-PLAYERDRIVER_OPTION (XSensMT build_XSensMT ON)
-PLAYERDRIVER_REQUIRE_ENVVAR (XSensMT build_XSensMT XSENSMT_SOURCE_DIR xsensmtSrcDir)
+PLAYERDRIVER_OPTION (xsensmt build_xsensmt OFF "Disabled by default - set XSENSMT_SOURCE_DIR")
+SET (XSENSMT_SOURCE_DIR "" CACHE FILEPATH "Directory containing the XSensMT manufacturer source files")
+MARK_AS_ADVANCED (XSENSMT_SOURCE_DIR)
 SET (xsensmtSrcs XSensMT.cc
-                 ${xsensmtSrcDir}/xsens_list.cpp
-                 ${xsensmtSrcDir}/xsens_time.cpp
-                 ${xsensmtSrcDir}/xsens_std.cpp
-                 ${xsensmtSrcDir}/cmt1.cpp
-                 ${xsensmtSrcDir}/cmt2.cpp
-                 ${xsensmtSrcDir}/cmt3.cpp
-                 ${xsensmtSrcDir}/cmtscan.cpp
-                 ${xsensmtSrcDir}/cmtmessage.cpp
-                 ${xsensmtSrcDir}/cmtpacket.cpp)
-PLAYERDRIVER_ADD_DRIVER (XSensMT build_XSensMT SOURCES ${xsensmtSrcs})
+                 ${XSENSMT_SOURCE_DIR}/xsens_time.cpp
+                 ${XSENSMT_SOURCE_DIR}/xsens_std.cpp
+                 ${XSENSMT_SOURCE_DIR}/cmt1.cpp
+                 ${XSENSMT_SOURCE_DIR}/cmt2.cpp
+                 ${XSENSMT_SOURCE_DIR}/cmt3.cpp
+                 ${XSENSMT_SOURCE_DIR}/cmtscan.cpp
+                 ${XSENSMT_SOURCE_DIR}/cmtmessage.cpp
+                 ${XSENSMT_SOURCE_DIR}/cmtpacket.cpp)
+PLAYERDRIVER_ADD_DRIVER (xsensmt build_xsensmt SOURCES ${xsensmtSrcs}
+                         INCLUDEDIRS ${XSENSMT_SOURCE_DIR})
+
