applied patch 2929113: Ruby Bindings install directory
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8485 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/client_libs/libplayerc++/bindings/ruby/CMakeLists.txt
+++ b/client_libs/libplayerc++/bindings/ruby/CMakeLists.txt
@@ -31,11 +31,11 @@ IF(BUILD_PLAYERCC)
                 SWIG_LINK_LIBRARIES (playercppr ${RUBY_LIBRARY} playerc++)
 
                 # TODO: find ruby in windows, check install dir is correct  
-                STRING(REPLACE "/usr/" "" ruby_relative_sitelib_dir ${RUBY_SITELIB_DIR})
-                STRING(REPLACE "/opt/" "" ruby_relative_sitelib_dir ${ruby_relative_sitelib_dir})
-                STRING(REPLACE "local/" "" ruby_relative_sitelib_dir ${ruby_relative_sitelib_dir})
-                STRING(REPLACE "lib/" ${PLAYER_LIBRARY_INSTALL_DIR}/ ruby_relative_sitelib_dir ${ruby_relative_sitelib_dir})
-                SET (RUBY_BINDINGS_INSTALL_DIR ${ruby_relative_sitelib_dir} CACHE PATH "Ruby bindings for the c++ library installation directory under $RUBY_SITELIB_DIR")
+                STRING(REPLACE "/usr/" "" ruby_relative_sitearch_dir ${RUBY_SITEARCH_DIR})
+                STRING(REPLACE "/opt/" "" ruby_relative_sitearch_dir ${ruby_relative_sitearch_dir})
+                STRING(REPLACE "local/" "" ruby_relative_sitearch_dir ${ruby_relative_sitearch_dir})
+                STRING(REPLACE "lib/" ${PLAYER_LIBRARY_INSTALL_DIR}/ ruby_relative_sitearch_dir ${ruby_relative_sitearch_dir})
+                SET (RUBY_BINDINGS_INSTALL_DIR ${ruby_relative_sitearch_dir} CACHE PATH "Ruby bindings for the c++ library installation directory under $RUBY_SITEARCH_DIR")
                 MARK_AS_ADVANCED (RUBY_BINDINGS_INSTALL_DIR)
 
                 INSTALL (FILES ${CMAKE_CURRENT_BINARY_DIR}/playercppr.so
