applied patch 2925359: New shell driver: opaquecmd
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8488 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/shell/CMakeLists.txt
+++ b/server/drivers/shell/CMakeLists.txt
@@ -41,3 +41,6 @@ PLAYERDRIVER_ADD_DRIVER (suppressor build_suppressor SOURCES suppressor.cc)
 
 PLAYERDRIVER_OPTION (velcmd build_velcmd ON)
 PLAYERDRIVER_ADD_DRIVER (velcmd build_velcmd SOURCES velcmd.cc)
+
+PLAYERDRIVER_OPTION (opaquecmd build_opaquecmd ON)
+PLAYERDRIVER_ADD_DRIVER (opaquecmd build_opaquecmd SOURCES opaquecmd.cc)
