Applied patch 2933939: two bugs in afsm config examples
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8546 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/config/CMakeLists.txt
+++ b/config/CMakeLists.txt
@@ -1,4 +1,6 @@
-SET (sampleConfigFiles  amigobot.cfg
+SET (sampleConfigFiles  afsm.cfg
+                        afsm.eps
+                        amigobot.cfg
                         amigobot_tcp.cfg
                         amtecM5.cfg
                         b21r_rflex_lms200.cfg
