Applied patch 2977971: add gstreamer camera driver
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8634 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/camera/CMakeLists.txt
+++ b/server/drivers/camera/CMakeLists.txt
@@ -4,6 +4,7 @@ ADD_SUBDIRECTORY (1394)
 ADD_SUBDIRECTORY (camfilter)
 ADD_SUBDIRECTORY (compress)
 ADD_SUBDIRECTORY (cvcam)
+ADD_SUBDIRECTORY (gstreamer)
 ADD_SUBDIRECTORY (imageseq)
 ADD_SUBDIRECTORY (sphere)
 ADD_SUBDIRECTORY (uvc)
