Applied patch 2974049: New driver: blobposition
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8637 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/position/CMakeLists.txt
+++ b/server/drivers/position/CMakeLists.txt
@@ -1,4 +1,5 @@
 ADD_SUBDIRECTORY (ascension)
+ADD_SUBDIRECTORY (blobposition)
 ADD_SUBDIRECTORY (bumpersafe)
 ADD_SUBDIRECTORY (deadstop)
 ADD_SUBDIRECTORY (globalize)
