Applied patch 2962513: Player SVN trunk: new searchpattern blobfinder driver also some missing files from an earlier patch
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8646 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/config/CMakeLists.txt
+++ b/config/CMakeLists.txt
@@ -25,6 +25,8 @@ SET (sampleConfigFiles  afsm.cfg
                         readlog.cfg
                         rfid.cfg
                         roomba.cfg
+                        searchpattern.cfg
+                        searchpattern_symbols.ps
                         segwayrmp.cfg
                         service_adv.cfg
                         simple.cfg
