Applied patch 2960374: New driver (speechcmd) and new option to inhibitor
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8650 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/shell/CMakeLists.txt
+++ b/server/drivers/shell/CMakeLists.txt
@@ -57,3 +57,6 @@ PLAYERDRIVER_ADD_DRIVER (velcmd build_velcmd SOURCES velcmd.cc)
 
 PLAYERDRIVER_OPTION (opaquecmd build_opaquecmd ON)
 PLAYERDRIVER_ADD_DRIVER (opaquecmd build_opaquecmd SOURCES opaquecmd.cc)
+
+PLAYERDRIVER_OPTION (speechcmd build_speechcmd ON)
+PLAYERDRIVER_ADD_DRIVER (speechcmd build_speechcmd SOURCES speechcmd.cc)
