Applied patch 2960235: New drivers for surveillance systems
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8651 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/camera/CMakeLists.txt
+++ b/server/drivers/camera/CMakeLists.txt
@@ -6,6 +6,8 @@ ADD_SUBDIRECTORY (compress)
 ADD_SUBDIRECTORY (cvcam)
 ADD_SUBDIRECTORY (gstreamer)
 ADD_SUBDIRECTORY (imageseq)
+ADD_SUBDIRECTORY (imgcmp)
+ADD_SUBDIRECTORY (imgsave)
 ADD_SUBDIRECTORY (sphere)
 ADD_SUBDIRECTORY (uvc)
 ADD_SUBDIRECTORY (yarp)
