Applied patch 2955163: Player SVN trunk: one more QNX patch
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8652 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/replace/CMakeLists.txt
+++ b/replace/CMakeLists.txt
@@ -13,7 +13,9 @@ IF (NOT HAVE_XDR)
                         xdr_intXX_t.c
                         xdr_mem.c
                         xdr_sizeof.c)
-    SET (ws2_32lib Ws2_32)
+    IF (PLAYER_OS_WIN)
+	SET (ws2_32lib Ws2_32)
+    ENDIF (PLAYER_OS_WIN)
 ENDIF (NOT HAVE_XDR)
 
 IF (NOT HAVE_GETOPT)
@@ -54,7 +56,9 @@ ENDIF (NOT HAVE_NANOSLEEP)
 
 IF (NOT HAVE_POLL)
     SET (replaceSrcs ${replaceSrcs} poll.c)
-    SET (ws2_32lib Ws2_32)
+    IF (PLAYER_OS_WIN)
+	SET (ws2_32lib Ws2_32)
+    ENDIF (PLAYER_OS_WIN)
 ENDIF (NOT HAVE_POLL)
 
 IF (NOT HAVE_COMPRESSBOUND)
@@ -64,9 +68,13 @@ ENDIF (NOT HAVE_COMPRESSBOUND)
 IF (replaceSrcs)
     PLAYER_ADD_LIBRARY (playerreplace ${replaceSrcs})
     TARGET_LINK_LIBRARIES (playerreplace playercommon)
-    IF (NOT HAVE_XDR OR NOT HAVE_POLL)
-        TARGET_LINK_LIBRARIES (playerreplace Ws2_32)
-    ENDIF (NOT HAVE_XDR OR NOT HAVE_POLL)
-    PLAYER_MAKE_PKGCONFIG ("playerreplace" "Player library of replacements for missing platform functionality - part of the Player Project" "playercommon ${ws2_32Lib}" "" "" "")
+    IF (PLAYER_OS_WIN)
+	IF (NOT HAVE_XDR OR NOT HAVE_POLL)	
+	    TARGET_LINK_LIBRARIES (playerreplace Ws2_32)
+	ENDIF (NOT HAVE_XDR OR NOT HAVE_POLL)
+	PLAYER_MAKE_PKGCONFIG ("playerreplace" "Player library of replacements for missing platform functionality - part of the Player Project" "playercommon ${ws2_32Lib}" "" "" "")
+    ELSE (PLAYER_OS_WIN)
+	PLAYER_MAKE_PKGCONFIG ("playerreplace" "Player library of replacements for missing platform functionality - part of the Player Project" "playercommon" "" "" "")
+    ENDIF (PLAYER_OS_WIN)
 ENDIF (replaceSrcs)
 
