Applied patch 2950807: Player SVN trunk: portio driver problem with sys/io.h
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8654 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/dio/portio/CMakeLists.txt
+++ b/server/drivers/dio/portio/CMakeLists.txt
@@ -1,8 +1,15 @@
-PLAYERDRIVER_OPTION (portio build_portio ON)
-PLAYERDRIVER_REJECT_OS (portio build_portio PLAYER_OS_WIN)
 IF (PLAYER_OS_QNX)
+    PLAYERDRIVER_OPTION (portio build_portio ON)
     PLAYERDRIVER_REQUIRE_HEADER (portio build_portio hw/inout.h)
 ELSE (PLAYER_OS_QNX)
+    CHECK_SYMBOL_EXISTS (inb_p sys/io.h HAVE_INB_P)
+    CHECK_SYMBOL_EXISTS (outb_p sys/io.h HAVE_OUTB_P)
+    IF (HAVE_INB_P AND HAVE_OUTB_P)
+        PLAYERDRIVER_OPTION (portio build_portio ON)
+    ELSE (HAVE_INB_P AND HAVE_OUTB_P)
+        PLAYERDRIVER_OPTION (portio build_portio OFF)
+    ENDIF (HAVE_INB_P AND HAVE_OUTB_P)
     PLAYERDRIVER_REQUIRE_HEADER (portio build_portio sys/io.h)
 ENDIF (PLAYER_OS_QNX)
+PLAYERDRIVER_REJECT_OS (portio build_portio PLAYER_OS_WIN)
 PLAYERDRIVER_ADD_DRIVER (portio build_portio SOURCES portio.cc)
