Applied patch #2916187: Python bindings for libplayerc++ build fixup
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8747 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/client_libs/libplayerc++/bindings/python/CMakeLists.txt
+++ b/client_libs/libplayerc++/bindings/python/CMakeLists.txt
@@ -14,9 +14,7 @@ IF(BUILD_PLAYERCC)
 
                 FIND_PACKAGE (PythonLibs)
                 INCLUDE_DIRECTORIES (${PYTHON_INCLUDE_PATH})
-                INCLUDE_DIRECTORIES (${PROJECT_BINARY_DIR})
                 INCLUDE_DIRECTORIES (${PROJECT_BINARY_DIR}/client_libs)
-                INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR})
                 INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/client_libs)
 
                 # Use playercpp.i from source directory
@@ -24,9 +22,9 @@ IF(BUILD_PLAYERCC)
 
                 SET_SOURCE_FILES_PROPERTIES(${playercpp_i} PROPERTIES CPLUSPLUS ON)
 
-                SET (SWIG_MODULE_playercpppy_EXTRA_DEPS ${PROJECT_SOURCE_DIR}/client_libs/libplayerc++/playerc++.h)
-                SWIG_ADD_MODULE (playercpppy python ${playercpp_i})
-                SWIG_LINK_LIBRARIES (playercpppy ${PYTHON_LIBRARIES} playerc++)
+                SET (SWIG_MODULE_playercpp_EXTRA_DEPS ${PROJECT_SOURCE_DIR}/client_libs/libplayerc++/playerc++.h)
+                SWIG_ADD_MODULE (playercpp python ${playercpp_i})
+                SWIG_LINK_LIBRARIES (playercpp ${PYTHON_LIBRARIES} playerc++)
 
                 IF (PYTHON_OS_WIN)
                     GET_FILENAME_COMPONENT (playercpyInstallDir ${PYTHON_EXECUTABLE} PATH)
@@ -41,8 +39,8 @@ IF(BUILD_PLAYERCC)
                 SET (PYTHON_BINDINGS_INSTALL_DIR ${playercpppyInstallDir} CACHE PATH "Python bindings installation directory under $prefix")
                 MARK_AS_ADVANCED (PYTHON_BINDINGS_INSTALL_DIR)
 
-                INSTALL (FILES ${CMAKE_CURRENT_BINARY_DIR}/playercpppy.py
-                        ${CMAKE_CURRENT_BINARY_DIR}/_playercpppy.so
+                INSTALL (FILES ${CMAKE_CURRENT_BINARY_DIR}/playercpp.py
+                        ${CMAKE_CURRENT_BINARY_DIR}/_playercpp.so
                         DESTINATION ${PYTHON_BINDINGS_INSTALL_DIR})
             ELSE (SWIG_FOUND)
                 MESSAGE (STATUS "Python bindings for C++ client library will not be built - could not find Swig")
