Applied patch 3018514: Localize interface visualization in playerv
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8797 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/utils/playerv/CMakeLists.txt
+++ b/utils/playerv/CMakeLists.txt
@@ -17,6 +17,7 @@ IF (BUILD_UTILS_PLAYERV)
                             pv_dev_fiducial.c
                             pv_dev_ir.c
                             pv_dev_laser.c
+			    pv_dev_localize.c
                             pv_dev_map.c
                             pv_dev_position2d.c
                             pv_dev_power.c
