Applied patch #3025619: Player SVN trunk: compatibility patch
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8816 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/libplayercore/CMakeLists.txt
+++ b/libplayercore/CMakeLists.txt
@@ -31,8 +31,10 @@ IF (NOT PLAYER_OS_QNX)
 ENDIF (NOT PLAYER_OS_QNX)
 
 IF (HAVE_CLOCK_GETTIME)
-    PLAYERCORE_ADD_INT_LINK_LIB (rt)
-    SET (playercoreLinkLibs ${playercoreLinkLibs} "rt")
+    IF (NOT PLAYER_OS_QNX)
+	PLAYERCORE_ADD_INT_LINK_LIB (rt)
+	SET (playercoreLinkLibs ${playercoreLinkLibs} "rt")
+    ENDIF (NOT PLAYER_OS_QNX)
 ELSE (HAVE_CLOCK_GETTIME)
     SET (playerreplaceLib playerreplace)
 ENDIF (HAVE_CLOCK_GETTIME)
