Applied patch #2948822: hemisson driver
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8819 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/mixed/CMakeLists.txt
+++ b/server/drivers/mixed/CMakeLists.txt
@@ -6,6 +6,7 @@ ADD_SUBDIRECTORY (epuck)
 ADD_SUBDIRECTORY (erratic)
 ADD_SUBDIRECTORY (evolution)
 ADD_SUBDIRECTORY (garcia)
+ADD_SUBDIRECTORY (hemisson)
 ADD_SUBDIRECTORY (irobot)
 ADD_SUBDIRECTORY (khepera)
 ADD_SUBDIRECTORY (mricp)
