--- a/server/drivers/mixed/mricp/stage_test/stage_mricp.cfg
+++ b/server/drivers/mixed/mricp/stage_test/stage_mricp.cfg
@@ -11,30 +11,28 @@ driver
 driver
 (
   name "stage"
-  provides ["position2d:0" "laser:0"]
+  provides ["position2d:0" "laser:1" "laser:0"]
   model "robot"
 )
-
 driver
 (
   name "mricp"
   provides ["position2d:1" "map:0"]
-  requires ["position2d:0" "laser:0"]
-  number_of_lasers 1
+  requires ["position2d:0" "laser0:::laser:0" "laser1:::laser:1"]
+  number_of_lasers 2
   laser0_ranges [-120 120]
+  laser1_ranges [-120 120]
   playerv_debug 0
   period 0.2
   MAXR 3.9
   MINR 0.05
   map_resolution 0.05
   map_saving_period 5
-  map_size 10
+  map_size 20
   use_max_range 1
-  sparse_scans_rate 3
+  sparse_scans_rate 2
   map_path "logs/"
   debug 0
   alwayson 1
   log 1
-  sanitycheck_distance 0.1
-  sanitycheck_angle 5
 )
