Applied patch #3034305: Player SVN: more camera fixes
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8831 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/camera/CMakeLists.txt
+++ b/server/drivers/camera/CMakeLists.txt
@@ -1,6 +1,7 @@
 ADD_SUBDIRECTORY (v4l)
 ADD_SUBDIRECTORY (v4l2)
 ADD_SUBDIRECTORY (1394)
+ADD_SUBDIRECTORY (camerareq)
 ADD_SUBDIRECTORY (camfilter)
 ADD_SUBDIRECTORY (compress)
 ADD_SUBDIRECTORY (cvcam)
