Applied patch #3040302: Canon Powershot driver and other fixes
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8844 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/camera/CMakeLists.txt
+++ b/server/drivers/camera/CMakeLists.txt
@@ -9,6 +9,7 @@ ADD_SUBDIRECTORY (gstreamer)
 ADD_SUBDIRECTORY (imageseq)
 ADD_SUBDIRECTORY (imgcmp)
 ADD_SUBDIRECTORY (imgsave)
+ADD_SUBDIRECTORY (powershot)
 ADD_SUBDIRECTORY (sphere)
 ADD_SUBDIRECTORY (uvc)
 ADD_SUBDIRECTORY (yarp)
