Applied patch #3048122: Player SVN: Maemo Linux compat. patch for camera drivers
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8860 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/config.h.in
+++ b/config.h.in
@@ -7,6 +7,7 @@
 #cmakedefine ENABLE_TCP_NODELAY 1
 
 #cmakedefine HAVE_GETADDRINFO 1
+#cmakedefine HAVE_I2C 1
 #cmakedefine HAVE_JPEG 1
 #cmakedefine HAVE_Z 1
 #cmakedefine HAVE_LINUX_JOYSTICK_H 1
