Applied patch #3057363: [Player driver]Movirobotic's mBase robot
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8881 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/mixed/CMakeLists.txt
+++ b/server/drivers/mixed/CMakeLists.txt
@@ -9,6 +9,7 @@ ADD_SUBDIRECTORY (garcia)
 ADD_SUBDIRECTORY (hemisson)
 ADD_SUBDIRECTORY (irobot)
 ADD_SUBDIRECTORY (khepera)
+ADD_SUBDIRECTORY (mbase)
 ADD_SUBDIRECTORY (mricp)
 ADD_SUBDIRECTORY (nomad)
 ADD_SUBDIRECTORY (p2os)
