Re-enable "laserfeature" driver and update documentation section
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8931 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/fiducial/CMakeLists.txt
+++ b/server/drivers/fiducial/CMakeLists.txt
@@ -9,3 +9,6 @@ PLAYERDRIVER_ADD_DRIVER (laservisualbarcode build_laservisualbarcode SOURCES las
 
 PLAYERDRIVER_OPTION (laservisualbw build_laservisualbw OFF "Has not been updated to use dynamic message structures; will segfault.")
 PLAYERDRIVER_ADD_DRIVER (laservisualbw build_laservisualbw SOURCES laservisualbw.cc)
+
+PLAYERDRIVER_OPTION (laserfeature build_laserfeature ON)
+PLAYERDRIVER_ADD_DRIVER (laserfeature build_laserfeature SOURCES laserfeature.cc)
