Fixed bug 3027542: Phidget drivers 2.1.7
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8932 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/config.h.in
+++ b/config.h.in
@@ -16,4 +16,5 @@
 #cmakedefine HAVE_IEEEFP_H 1
 #cmakedefine WORDS_BIGENDIAN 1
 #cmakedefine HAVE_SETDLLDIRECTORY 1
+#cmakedefine HAVE_PHIDGET_2_1_7 1
 
