--- a/server/drivers/dio/portio/CMakeLists.txt
+++ b/server/drivers/dio/portio/CMakeLists.txt
@@ -2,6 +2,7 @@ IF (PLAYER_OS_QNX)
     PLAYERDRIVER_OPTION (portio build_portio ON)
     PLAYERDRIVER_REQUIRE_HEADER (portio build_portio hw/inout.h)
 ELSE (PLAYER_OS_QNX)
+    INCLUDE(CheckSymbolExists)
     CHECK_SYMBOL_EXISTS (inb_p sys/io.h HAVE_INB_P)
     CHECK_SYMBOL_EXISTS (outb_p sys/io.h HAVE_OUTB_P)
     IF (HAVE_INB_P AND HAVE_OUTB_P)
