Updated unicapimage to Player 3.0 ThreadedDriver model.  Changed unicapimage CMakeLists.txt to look for libunicap.pc.  Fixed bogus assertion that was causing PlayerCam to crash.
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8941 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/camera/unicap/CMakeLists.txt
+++ b/server/drivers/camera/unicap/CMakeLists.txt
@@ -1,20 +1,13 @@
 PLAYERDRIVER_OPTION (unicapimage build_unicapimage ON)
 
-SET (UNICAP_DIR "" CACHE STRING "Directory containing the UniCap headers and libraries")
-MARK_AS_ADVANCED (UNICAP_DIR)
-IF ("${UNICAP_DIR}" STREQUAL "")
-    SET (unicapReqHeader "unicap.h")
-    SET (unicapExtraFlags "")
-    SET (unicapExtraLibs "-lunicap -lrt")
-ELSE ("${UNICAP_DIR}" STREQUAL "")
-    SET (unicapReqHeader "${UNICAP_DIR}/include/unicap/unicap.h")
-    SET (unicapExtraFlags "-I${UNICAP_DIR}/include/unicap")
-    SET (unicapExtraLibs "-L${UNICAP_DIR}/lib -lcanlib -lrt")
-ENDIF ("${UNICAP_DIR}" STREQUAL "")
+PLAYERDRIVER_REQUIRE_PKG (unicapimage build_unicapimage libunicap unicap_includeDirs
+    unicap_libDirs unicap_linkLibs unicap_linkFlags unicap_cFlags)
 
-PLAYERDRIVER_REQUIRE_HEADER (unicapimage build_unicapimage ${unicapReqHeader})
 
 PLAYERDRIVER_ADD_DRIVER (unicapimage build_unicapimage
-                         LINKFLAGS -L{UNICAP_DIR}/lib -lunicap -lrt
-                         CFLAGS -I${UNICAP_DIR}/include -I${UNICAP_DIR}/include/unicap
+                         INCLUDEDIRS ${unicap_includeDirs} 
+                         LIBDIRS ${unicap_libDirs} 
+                         LINKLIBS ${unicap_linkLibs}
+                         LINKFLAGS ${unicap_linkFlags} 
+                         CFLAGS ${unicap_cFlags}
                          SOURCES unicapImage.cc)
