Applied patch #3055958: Adds uncertrainty ellipsis for localization to utils
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8965 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,7 @@ ADD_SUBDIRECTORY (libplayerwkb)
 ADD_SUBDIRECTORY (libplayerjpeg)
 ADD_SUBDIRECTORY (libplayertcp)
 ADD_SUBDIRECTORY (libplayersd)
+ADD_SUBDIRECTORY (libplayerutil)
 ADD_SUBDIRECTORY (rtk2)
 ADD_SUBDIRECTORY (server)
 ADD_SUBDIRECTORY (examples)
