--- a/utils/playerv/CMakeLists.txt
+++ b/utils/playerv/CMakeLists.txt
@@ -31,7 +31,7 @@ IF (BUILD_UTILS_PLAYERV)
         INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/client_libs ${GTK_PKG_INCLUDE_DIRS})
         LINK_DIRECTORIES (${GTK_PKG_LIBRARY_DIRS})
         PLAYER_ADD_EXECUTABLE (playerv ${playervSrcs})
-        TARGET_LINK_LIBRARIES (playerv playerc playerinterface playercommon
+        TARGET_LINK_LIBRARIES (playerv playerc playerinterface playercommon playerutil
             rtk ${PLAYERC_EXTRA_LINK_LIBRARIES} ${GTK_PKG_LIBRARIES})
         IF (PLAYER_OS_SOLARIS)
             TARGET_LINK_LIBRARIES (playerv rt)
