New driver: wlanscan
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@8990 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/wifi/CMakeLists.txt
+++ b/server/drivers/wifi/CMakeLists.txt
@@ -1,3 +1,5 @@
+ADD_SUBDIRECTORY (wlanscan)
+
 PLAYERDRIVER_OPTION (aodv build_aodv ON)
 PLAYERDRIVER_REJECT_OS (aodv build_aodv PLAYER_OS_WIN)
 PLAYERDRIVER_ADD_DRIVER (aodv build_aodv SOURCES aodv.cc)
