Applied patch #3134439: differential driver 2xPosition1d --> position2d
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@9004 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/position/CMakeLists.txt
+++ b/server/drivers/position/CMakeLists.txt
@@ -2,6 +2,7 @@ ADD_SUBDIRECTORY (ascension)
 ADD_SUBDIRECTORY (blobposition)
 ADD_SUBDIRECTORY (bumpersafe)
 ADD_SUBDIRECTORY (deadstop)
+ADD_SUBDIRECTORY (differential)
 ADD_SUBDIRECTORY (globalize)
 ADD_SUBDIRECTORY (goto)
 ADD_SUBDIRECTORY (isense)
