Applied patch #3134435: Lego NXT driver
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@9005 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/mixed/CMakeLists.txt
+++ b/server/drivers/mixed/CMakeLists.txt
@@ -12,6 +12,7 @@ ADD_SUBDIRECTORY (khepera)
 ADD_SUBDIRECTORY (mbase)
 ADD_SUBDIRECTORY (mricp)
 ADD_SUBDIRECTORY (nomad)
+ADD_SUBDIRECTORY (nxt)
 ADD_SUBDIRECTORY (p2os)
 ADD_SUBDIRECTORY (phidgetIFK)
 ADD_SUBDIRECTORY (reb)
