--- a/doc/player.dox.in
+++ b/doc/player.dox.in
@@ -459,10 +459,9 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories
 # with spaces.
 
-#INPUT                  = player.txt install.html migration.html tutorials.html utils.html clients.html plugin_driver.html configfile.html protocol.html ../libplayerxdr/playerxdr.html ../libplayerxdr ../libplayercore/playercore.h ../server/libplayerdrivers ../libplayertcp ../libplayercore ../server/drivers/ ../utils/playerv/playerv.c ../utils/playernav/playernav.c ../utils/playercam/playercam.c ../utils/playerjoy/playerjoy.cc ../utils/playerprint/playerprint.cc ../utils/playervcr/playervcr.c ../utils/dgps_server/dgps_server.dox ../client_libs/libplayerc/doc/mainpage.html ../client_libs/libplayerc/doc/libplayerc_py.html ../client_libs/libplayerc/playerc.h ../client_libs/libplayerc++/playerclient.h ../client_libs/libplayerc++/utility.h ../client_libs/libplayerc++/clientproxy.h ../client_libs/libplayerc++/playerc++.h ../client_libs/libplayerc++/playerc++.cc ../client_libs/libplayerc++/playererror.h
 INPUT                  = player.txt quick_start.txt architecture.txt \
 supported_hardware.txt tutorial_devices.txt tutorial_migration.txt \
-tutorial_cameras.txt tutorial_automake.txt tutorial_crosscompiling.txt \
+tutorial_cameras.txt tutorial_automake.txt tutorial_cmake.txt tutorial_crosscompiling.txt \
 tutorial_args.txt tutorial_datalog.txt tutorial_config.txt tutorial_interface.txt \
 tutorial_plugins.txt tutorial_maps.txt install.txt ../server/server.cc \
 ../libplayerinterface/player.h @PROJECT_BINARY_DIR@/libplayerinterface/player_interfaces.h \
@@ -516,7 +515,8 @@ EXCLUDE_PATTERNS       =
 # directories that contain example code fragments that are included (see
 # the \include command).
 
-EXAMPLE_PATH           = ../client_libs/libplayerc/doc ../examples ../config ../client_libs/libplayerc/bindings/python
+EXAMPLE_PATH           = ../client_libs/libplayerc/doc ../examples  \
+../config ../client_libs/libplayerc/bindings/python
 
 # If the value of the EXAMPLE_PATH tag contains directories, you can use the
 # EXAMPLE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp
