Changed OS X Plugin makefile to build a .so instead of a .dylib
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@9036 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -67,7 +67,7 @@ IF (BUILD_DOCUMENTATION)
         ENDIF (DOXYGEN_LATEX)
 
         # Upload documentation target (not supported on Windows)
-        SET (docWebDestination "Player-cvs")
+        SET (docWebDestination "Player-svn")
         SET (docName "player")
         IF (NOT PLAYER_OS_WIN)
             ADD_CUSTOM_TARGET (upload_doc
