Applied patch #3295824: libguile-based scripting engine for Player server side
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@9044 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/shell/CMakeLists.txt
+++ b/server/drivers/shell/CMakeLists.txt
@@ -60,3 +60,5 @@ PLAYERDRIVER_ADD_DRIVER (opaquecmd build_opaquecmd SOURCES opaquecmd.cc)
 
 PLAYERDRIVER_OPTION (speechcmd build_speechcmd ON)
 PLAYERDRIVER_ADD_DRIVER (speechcmd build_speechcmd SOURCES speechcmd.cc)
+
+ADD_SUBDIRECTORY (guile)
