Changes to playernav: removed declarations from inside of assert() calls (in case player is compiled with -DNDEBUG), and changed behavior so it exits cleanly when connection to Player fails instead of bombing on an assertion
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@9054 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/config/CMakeLists.txt
+++ b/config/CMakeLists.txt
@@ -10,6 +10,7 @@ SET (sampleConfigFiles  afsm.cfg
                         hokuyo_aist.cfg
                         iwspy.cfg
                         joystick.cfg
+                        kinect.cfg
                         lms400.cfg
                         magellan.cfg
                         mapfile.cfg
